k8s/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: using-gin
  name: using-gin-deploy
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 20%
  selector:
    matchLabels:
      app: using-gin
  template:
    metadata:
      labels:
        app: using-gin
      name: using-gin
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: natural-history-museum
        image: using-gin:v1.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
        livenessProbe:
          initialDelaySeconds: 20
          httpGet:
            port: 8080
            path: /status
            scheme: HTTP
          timeoutSeconds: 3
          failureThreshold: 2
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            port: 8080
            path: /status/health
            scheme: HTTP
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
