k8s/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: using-gin-svc
  labels:
    app: using-gin
    release: prometheus
    self-monitor: "true"
spec:
  selector:
    app: using-gin
  type: LoadBalancer
  sessionAffinity: None
  ports:
  - name: http-web
    port: 8080
    targetPort: 8080
    nodePort: 32000
    protocol: TCP
