k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: using-gin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /using-gin/(.*)
          backend:
            service:
              name: using-gin-svc
              port:
                number: 8080
